Implement login logic and update docs
- Add api docs for user login

- Create a custom request for validating user login inputs.

- Add user login route/endpoint
